--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Flutter - Portfolio Ankit Kumar">
   <meta name="version" content="1.0.1+1">
 
   <!-- iOS meta tags & icons -->
@@ -30,7 +30,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="web_logo.png"/>
 
-  <title>protfolio</title>
+  <title>Protfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
